@@ -19,6 +19,7 @@
 
 #include "aalcameracontrol.h"
 #include "aalcameraflashcontrol.h"
+#include "aalcamerafocuscontrol.h"
 #include "aalcameraservice.h"
 #include "aalcamerazoomcontrol.h"
 #include "aalimagecapturecontrol.h"
@@ -30,11 +31,6 @@
 
 
 void error_msg_cb(void* context)
-{
-    printf("%s \n", __PRETTY_FUNCTION__);
-}
-
-void autofocus_msg_cb(void* context)
 {
     printf("%s \n", __PRETTY_FUNCTION__);
 }
@@ -52,12 +48,12 @@ AalCameraService::AalCameraService(QObject *parent):
 
     m_cameraControl = new AalCameraControl(this);
     m_flashControl = new AalCameraFlashControl(this);
+    m_focusControl = new AalCameraFocusControl(this);
     m_zoomControl = new AalCameraZoomControl(this);
     m_imageCaptureControl = new AalImageCaptureControl(this);
     m_videoOutput = new AalVideoRendererControl(this);
 
     m_cameraListener->on_msg_error_cb = error_msg_cb;
-    m_cameraListener->on_msg_focus_cb = autofocus_msg_cb;
 }
 
 AalCameraService::~AalCameraService()
@@ -65,6 +61,7 @@ AalCameraService::~AalCameraService()
     m_cameraControl->setState(QCamera::UnloadedState);
     delete m_cameraControl;
     delete m_flashControl;
+    delete m_focusControl;
     delete m_zoomControl;
     delete m_imageCaptureControl;
     delete m_videoOutput;
@@ -78,6 +75,9 @@ QMediaControl *AalCameraService::requestControl(const char *name)
 
     if (qstrcmp(name, QCameraFlashControl_iid) == 0)
         return m_flashControl;
+
+    if (qstrcmp(name, QCameraFocusControl_iid) == 0)
+        return m_focusControl;
 
     if (qstrcmp(name, QCameraImageCaptureControl_iid) == 0)
         return m_imageCaptureControl;
@@ -114,6 +114,7 @@ bool AalCameraService::connectCamera()
 
     m_cameraListener->context = m_androidControl;
     m_flashControl->init(m_androidControl);
+    m_focusControl->init(m_androidControl, m_cameraListener);
     m_zoomControl->init(m_androidControl, m_cameraListener);
     m_videoOutput->startPreview();
 
