@@ -24,6 +24,7 @@
 
 class AalCameraControl;
 class AalCameraFlashControl;
+class AalCameraFocusControl;
 class AalCameraZoomControl;
 class AalImageCaptureControl;
 class AalVideoRendererControl;
@@ -44,6 +45,7 @@ public:
 
     AalCameraControl *cameraControl() const { return m_cameraControl; }
     AalCameraFlashControl *flashControl() const { return m_flashControl; }
+    AalCameraFocusControl *focusControl() const { return m_focusControl; }
     AalCameraZoomControl *zoomControl() const { return m_zoomControl; }
     AalImageCaptureControl *imageCaptureControl() const { return m_imageCaptureControl; }
     AalVideoRendererControl *videoOutputControl() const { return m_videoOutput; }
@@ -61,6 +63,7 @@ private:
 
     AalCameraControl *m_cameraControl;
     AalCameraFlashControl *m_flashControl;
+    AalCameraFocusControl *m_focusControl;
     AalCameraZoomControl *m_zoomControl;
     AalImageCaptureControl *m_imageCaptureControl;
     AalVideoRendererControl *m_videoOutput;
